refactor: remove native access flags activated by default